2021-09-29  Eric Hutchison  <ehutchison@apple.com>

        Unreviewed, reverting r282850.

        Patch causing many crashes in
        bmalloc::Heap::decommitLargeRange

        Reverted changeset:

        "[bmalloc] freeableMemory and footprint of Heap are completely
        broken"
        https://bugs.webkit.org/show_bug.cgi?id=230245
        https://commits.webkit.org/r282850

2021-09-27  Filip Pizlo  <fpizlo@apple.com>

        [libpas] Fix coalescing of the large sharing pool and make it easy to introspect it (update to e4d20851ee9ff00f2962b349a9ff8465695a83d7)
        https://bugs.webkit.org/show_bug.cgi?id=230867

        Reviewed by Yusuke Suzuki.

        This adds the ability to enable the libpas status reporter, adds a large sharing pool dump to
        the status report, and fixes a large sharing pool coalescing bug found by doing that. Previously
        we weren't coalescing things that are not free+committed.

        Also updates the export script that I use to keep the libpas git repo in sync with what's in WK.

        The large sharing pool is the mechanism by which libpas can find memory that can be decommitted
        across isolated large heaps, even if those large heaps share pages with one another. The main
        data structure is a red-black tree of nodes that represent memory ranges. If there are two
        adjacent ranges of memory that are both fully live and committed or both decommitted, then we
        want those to be represented using a single node. That wasn't quite working right. Even the
        libpas test for this was testing the wrong thing. This fixes the behavior and the test. It's
        perf-neutral since large heaps usually have a small number of objects in them anyway.

        The new status reporting functionality can be enabled with the WebKitPasStatusReporter
        environment variable. This takes an integer that tells the amount of data in the report. Here
        are the recognized values:
